# entropy-demo

./: .gitignore  demo.ipynb  demo.py  mock_instruments.py  plots_library.py  pyproject.toml
.entropy/: entropy.db  entropy.hdf5
entropy-demo/.entropy/: entropy.db  entropy.hdf5
