[tool.poetry]
name = "entropy-demo"
version = "0.1.0"
description = ""
authors = ["Gal Winer <galwiner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
qm-qua = "^0.3.5"
ipykernel = "^6.7.0"
scipy = "1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
